--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
+    "firebase": "^9.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.3.1",
