--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
+    "axios": "^0.24.0",
     "firebase": "^9.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^7.20.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
